--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -120,6 +120,12 @@
                                             <dxg:GridColumn FieldName="Comment"/>
                                             <dxg:GridColumn FieldName="OrderNumber"/>
                                         </dxg:GridControl.Columns>
+                                        <dxg:GridControl.View>
+                                            <dxg:TableView EditorShowMode="MouseUpFocused"/>
+                                        </dxg:GridControl.View>
+                                        <dxmvvm:Interaction.Behaviors>
+                                            <dxg:GridDragDropManager AllowDrag="True" AllowDrop="True" />
+                                        </dxmvvm:Interaction.Behaviors>
                                     </dxg:GridControl>
                                 </dxg:DataControlDetailDescriptor.DataControl>
                             </dxg:DataControlDetailDescriptor>
