--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -154,7 +154,7 @@
                             </dxg:DataControlDetailDescriptor>
                         </dxg:GridControl.DetailDescriptor>
                         <dxg:GridControl.View>
-                            <dxg:TableView >
+                            <dxg:TableView IsDetailButtonVisibleBinding="{Binding Row.Actions,Converter={local:ExpandButtonVisibilityConverter}}" >
                                 <dxg:TableView.FormatConditions>
                                     <dxg:FormatCondition ApplyToRow="True" FieldName="StatusId" PredefinedFormatName="GreenFillWithDarkGreenText" Value1="1" ValueRule="Equal"/>
                                 </dxg:TableView.FormatConditions>
