--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -2,12 +2,13 @@
         xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
         x:Class="ListOfDeal.MainWindow"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-            xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+        xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:ListOfDeal"
         Title="MainWindow" Height="700" Width="1200"
+             WindowState="Maximized"
              SnapsToDevicePixels="True" UseLayoutRounding="True"
              >
     <Window.Resources>
@@ -33,7 +34,7 @@
                                 <dxe:ComboBoxEdit ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" EditValue="{Binding CurrentProject.StatusId}"/>
                             </dxlc:LayoutItem>
                             <dxlc:LayoutItem Label="Comment:">
-                                <dxe:TextEdit EditValue="{Binding CurrentProject.Comment}"/>
+                                <dxe:MemoEdit EditValue="{Binding CurrentProject.Comment}"/>
                             </dxlc:LayoutItem>
                             <dxlc:LayoutItem Label="DesiredResult:">
                                 <dxe:TextEdit EditValue="{Binding CurrentProject.DesiredResult}"/>
@@ -56,7 +57,7 @@
                                 <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.StatusId}" ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
                             </dxlc:LayoutItem>
                             <dxlc:LayoutItem Label="ScheduledTime:">
-                                <dxe:TextEdit EditValue="{Binding CurrentAction.ScheduledTime}"/>
+                                <dxe:DateEdit EditValue="{Binding CurrentAction.ScheduledTime}"/>
                             </dxlc:LayoutItem>
                             <dxlc:LayoutItem Label="DelegatedTo:">
                                 <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.DelegatedTo}" ItemsSource="{Binding DelegatePersons}" ValueMember="Id" DisplayMember="Name" />
@@ -65,103 +66,16 @@
                                 <dxe:CheckEdit EditValue="{Binding CurrentAction.IsActive}"/>
                             </dxlc:LayoutItem>
                             <dxlc:LayoutItem Label="Comment:">
-                                <dxe:TextEdit EditValue="{Binding CurrentAction.Comment}" />
+                                <dxe:MemoEdit EditValue="{Binding CurrentAction.Comment}" />
                             </dxlc:LayoutItem>
                             <Button Content="{Binding SelectedProject.Name,StringFormat=Now {0}}" Command="{Binding AddActionCommand}"/>
                         </dxlc:LayoutGroup>
                     </dxlc:LayoutGroup>
-                    <dxg:GridControl ItemsSource="{Binding Projects}" CurrentItem="{Binding SelectedProject,Mode=TwoWay}" SelectionMode="Row">
-                        <dxmvvm:Interaction.Behaviors>
-                            <dxmvvm:EventToCommand  Command="{Binding OpenEditProjectCommand}" EventName="MouseDoubleClick"/>
-                        </dxmvvm:Interaction.Behaviors>
-                        <dxg:GridControl.Columns>
-                            <dxg:GridColumn FieldName="Name" Width="490"/>
-                            <dxg:GridColumn FieldName="DateCreated"/>
-                            <dxg:GridColumn FieldName="TypeId">
-                                <dxg:GridColumn.EditSettings>
-                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name" />
-                                </dxg:GridColumn.EditSettings>
-                            </dxg:GridColumn>
-                            <dxg:GridColumn FieldName="Comment">
-                                <dxg:GridColumn.EditSettings>
-                                    <dxe:MemoEditSettings />
-                                </dxg:GridColumn.EditSettings>
-                            </dxg:GridColumn>
-                            <dxg:GridColumn FieldName="DesiredResult"/>
-                            <dxg:GridColumn FieldName="StatusId">
-                                <dxg:GridColumn.EditSettings>
-                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" />
-                                </dxg:GridColumn.EditSettings>
-                            </dxg:GridColumn>
-                        </dxg:GridControl.Columns>
-                        <dxg:GridControl.DetailDescriptor>
-                            <dxg:DataControlDetailDescriptor ItemsSourcePath="Actions">
-                                <dxg:DataControlDetailDescriptor.DataControl>
-                                    <dxg:GridControl >
-                                        <dxg:GridControl.Columns>
-                                            <dxg:GridColumn FieldName="Name" Width="325"/>
-                                            <dxg:GridColumn FieldName="TriggerId">
-                                                <dxg:GridColumn.EditSettings>
-                                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name">
-
-                                                    </dxe:ComboBoxEditSettings>
-                                                </dxg:GridColumn.EditSettings>
-                                            </dxg:GridColumn>
-                                            <dxg:GridColumn FieldName="StatusId">
-                                                <dxg:GridColumn.EditSettings>
-                                                    <dxe:ComboBoxEditSettings  ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
-                                                </dxg:GridColumn.EditSettings>
-                                            </dxg:GridColumn>
-                                            <dxg:GridColumn FieldName="DateCreated" ReadOnly="True"/>
-                                            <dxg:GridColumn FieldName="ScheduledTime">
-                                                <dxg:GridColumn.EditSettings>
-                                                    <dxe:DateEditSettings/>
-                                                </dxg:GridColumn.EditSettings>
-                                            </dxg:GridColumn>
-                                            <dxg:GridColumn FieldName="DelegatedTo" >
-                                                <dxg:GridColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <dxe:ComboBoxEdit x:Name="PART_Editor" 
-                                                                          ItemsSource="{Binding DataContext.DelegatePersons, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=dxg:DataPresenter}}" 
-                                                                               ValueMember="Id" DisplayMember="Name" 
-                                                                               >
-                                                            <dxe:ComboBoxEdit.Style>
-                                                                <Style TargetType="dxe:ComboBoxEdit">
-                                                                    <Setter Property="IsEnabled" Value="False"/>
-                                                                    <Style.Triggers>
-                                                                        <DataTrigger Binding="{Binding RowData.Row.StatusId}" Value="3">
-                                                                            <Setter Property="IsEnabled" Value="True"/>
-                                                                        </DataTrigger>
-                                                                    </Style.Triggers>
-                                                                </Style>
-                                                            </dxe:ComboBoxEdit.Style>
-                                                        </dxe:ComboBoxEdit>
-                                                    </DataTemplate>
-                                                </dxg:GridColumn.CellTemplate>
-                                            </dxg:GridColumn>
-                                            <dxg:GridColumn FieldName="IsActive" Width="70"/>
-                                            <dxg:GridColumn FieldName="Comment">
-                                                <dxg:GridColumn.EditSettings>
-                                                    <dxe:MemoEditSettings />
-                                                </dxg:GridColumn.EditSettings>
-                                            </dxg:GridColumn>
-                                        </dxg:GridControl.Columns>
-                                        <dxg:GridControl.View>
-                                            <dxg:TableView ShowGroupPanel="False"/>
-                                        </dxg:GridControl.View>
-                                    </dxg:GridControl>
-                                </dxg:DataControlDetailDescriptor.DataControl>
-                            </dxg:DataControlDetailDescriptor>
-                        </dxg:GridControl.DetailDescriptor>
-                        <dxg:GridControl.View>
-                            <dxg:TableView IsDetailButtonVisibleBinding="{Binding Row.Actions,Converter={local:ExpandButtonVisibilityConverter}}" >
-                                <dxg:TableView.FormatConditions>
-                                    <dxg:FormatCondition ApplyToRow="True" FieldName="StatusId" PredefinedFormatName="GreenFillWithDarkGreenText" Value1="1" ValueRule="Equal"/>
-                                </dxg:TableView.FormatConditions>
-                            </dxg:TableView>
-                        </dxg:GridControl.View>
-                    </dxg:GridControl>
+                    <local:ProjectsView/>
                 </dxlc:LayoutGroup>
+            </dx:DXTabItem>
+            <dx:DXTabItem Header="AllProjects">
+                <local:ProjectsView/>
             </dx:DXTabItem>
             <dx:DXTabItem Header="Waited">
                 <Grid>
@@ -177,7 +91,7 @@
                             <dxmvvm:EventToCommand EventName="CustomRowFilter" PassEventArgsToCommand="True" Command="{Binding CustomRowFilterCommand}"/>
                         </dxmvvm:Interaction.Behaviors>
                         <dxg:GridControl.Columns>
-                            <dxg:GridColumn FieldName="Name"/>
+                            <dxg:GridColumn FieldName="Name" Width="550"/>
                             <dxg:GridColumn FieldName="TriggerId" GroupIndex="0" >
                                 <dxg:GridColumn.EditSettings>
                                     <dxe:ComboBoxEditSettings ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name" >
@@ -198,7 +112,17 @@
                                     <dxe:MemoEditSettings />
                                 </dxg:GridColumn.EditSettings>
                             </dxg:GridColumn>
+                            <dxg:GridColumn FieldName="TriggerId">
+                                <dxg:GridColumn.EditSettings>
+                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name"/>
+                                </dxg:GridColumn.EditSettings>
+                            </dxg:GridColumn>
                             <dxg:GridColumn FieldName="ProjectName" />
+                            <dxg:GridColumn FieldName="ProjectType" GroupIndex="0">
+                                <dxg:GridColumn.EditSettings>
+                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name"/>
+                                </dxg:GridColumn.EditSettings>
+                            </dxg:GridColumn>
                         </dxg:GridControl.Columns>
                     </dxg:GridControl>
                 </Grid>
